# prompt-admin

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  nginx.conf  supervisord.conf
client/: index.html  package-lock.json  (+2 more)
server/: main.py  pyproject.toml  settings.py  test.py
server/promptadmin/api/: app.py  session_middleware.py
server/promptadmin/api/dto/: prompt.py
server/promptadmin/api/routers/: __init__.py  auth.py  dependency.py  format.py  prompts.py
server/promptadmin/api/service/: format_service.py  llm_service.py  preview_template_service.py  prompt_sync_service.py  user_data.py  user_manager_service.py
server/promptadmin/commons/: async_utils.py
server/promptadmin/commons/dto/: __init__.py  view_params.py  view_params_comparison.py  view_params_filter.py  view_params_order.py
server/promptadmin/commons/entity/: __init__.py  base_entity.py
server/promptadmin/commons/error/: blocking_error.py  find_error.py  init_error.py  internal_error.py  unexpected_error.py
server/promptadmin/commons/fastapi/: error_handler.py
server/promptadmin/commons/job/: __init__.py
server/promptadmin/commons/logging/: configure_logstash.py
server/promptadmin/commons/redis/: redis_manager.py
server/promptadmin/data/: init.sql
server/promptadmin/format/: dto.py  errors.py  schema.py
server/promptadmin_server/api/: app.py  exceptions.py  exceptions_handlers.py  session_middleware.py  utlis.py
server/promptadmin_server/data/: init.sql
server/promptadmin_server/format/: schema.py
server/tests/format/: schema_cases_test.py  schema_test.py
(+372 files in other folders)
