[tool.poetry]
name = "prompt-admin-server"
version = "0.1.0"
description = ""
authors = ["phoenix <vova24848@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.6"
requests = "^2.31.0"
faststream = "0.4.3"
asyncpg = "^0.29.0"
redis = "^5.0.1"
aio_pika = "^9.3.0"
greenlet = "^3.0.2"
python-logstash-async = "^3.0.0"
httpx = "^0.27.0"
starlette = "^0.37.2"
uvicorn = "^0.29.0"
Jinja2 = "^3.1.2"
itsdangerous = "^2.2.0"
prompt-admin = "^0.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
